[socks] Add support for SOCKs5 proxies
Initial commit adds support for:
1) proxying outgoing peer connections
2) Proxying HTTP(s) tracker connections

UDP tracker support is currently not proxied.
Incoming connections are not proxyable.

--- a/src/DotNetCoreSample/DotNetCoreSample.csproj
+++ b/src/DotNetCoreSample/DotNetCoreSample.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\MonoTorrent.Client\MonoTorrent.Client.csproj" />
     <ProjectReference Include="..\MonoTorrent.Factories\MonoTorrent.Factories.csproj" />
     <ProjectReference Include="..\MonoTorrent.PieceWriter\MonoTorrent.PieceWriter.csproj" />
+    <ProjectReference Include="..\MonoTorrent.Socks5\MonoTorrent.Socks5.csproj" />
     <ProjectReference Include="..\MonoTorrent\MonoTorrent.csproj" />
   </ItemGroup>
 
