--- a/src/SampleClient/SampleClient.csproj
+++ b/src/SampleClient/SampleClient.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\MonoTorrent.Client\MonoTorrent.Client.csproj" />
     <ProjectReference Include="..\MonoTorrent.Factories\MonoTorrent.Factories.csproj" />
     <ProjectReference Include="..\MonoTorrent.PieceWriter\MonoTorrent.PieceWriter.csproj" />
+    <ProjectReference Include="..\MonoTorrent.Socks5\MonoTorrent.Socks5.csproj" />
     <ProjectReference Include="..\MonoTorrent\MonoTorrent.csproj" />
   </ItemGroup>
 
