--- a/src/MonoTorrent.Socks5/MonoTorrent.Socks5.csproj
+++ b/src/MonoTorrent.Socks5/MonoTorrent.Socks5.csproj
@@ -3,10 +3,13 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GitCommitsRelativeTo>$([MSBuild]::GetDirectoryNameOfFileAbove ('$(MSBuildThisFileDirectory)', 'version_socks5.txt'))\</GitCommitsRelativeTo>
+
+    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput)</TargetsForTfmSpecificBuildOutput>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DotProxify" Version="0.0.0.2" />
+    <PackageReference Include="MonoTorrent" Version="3.0" ExcludeAssets="build" />
   </ItemGroup>
 
   <ItemGroup>
